infrastructure/cilium-bgp/ingress-hubble.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns-internal.alpha.kubernetes.io/hostname: "hubble.k8s.home.geoffdavis.com"
    external-dns-internal.alpha.kubernetes.io/target: "172.29.51.200"
    nginx.ingress.kubernetes.io/auth-url: https://hubble.k8s.home.geoffdavis.com/outpost.goauthentik.io/auth/nginx
    nginx.ingress.kubernetes.io/auth-signin: https://authentik.k8s.home.geoffdavis.com/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
spec:
  ingressClassName: nginx-internal
  tls:
    - hosts:
        - hubble.k8s.home.geoffdavis.com
      secretName: hubble-ui-tls
  rules:
    - host: hubble.k8s.home.geoffdavis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
